eclaircir le fond

--- a/style/background.css
+++ b/style/background.css
@@ -4,7 +4,7 @@
     background-size: 300%;
     background-position: left;
     /* transition: background-position 1s; */
-    animation: moveGrad 30s infinite;
+    /* animation: moveGrad 30s infinite; */
 
 }
 
